--- a/index.html
+++ b/index.html
@@ -1,72 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Currículo de Felipe Seidi Harakawa</title>
-        <link rel="stylesheet" href="style.css">
-    </head>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="Felipe Seidi Harakawa">
+    <link rel="stylesheet" href="style.css">
+    <title>Currículo de Felipe Seidi Harakawa</title>
+</head>
     <body>
-        <div id="curriculo">
-            <h1>
-                Felipe Seidi Harakawa
-            </h1>
-            <header>
-                <figure> 
-                    <img class="foto" src = "assets/foto.jpeg" alt = "Uma foto minha no meu currículo" width = "330">
-                </figure>
-                <p> 
-                    🔥 Desenvolvedor de Software Junior.<br>
-                    📚 Formado em Sistemas de Informação pela Universidade Federal de Santa Maria.<br>
-                    💼 Desejo atuar na área de Tecnologia da Informação, Suporte, ou áreas correlacionadas. Lembrando minha total disposição ao aprendizado de competências ainda não adquiridas, ao cumprimento de horários, à cultura interna e todas atividades designadas ao cargo.
-                </p>
+        <h1>Felipe Seidi Harakawa</h1>
+        <div id="flex-box">
+            <header class="header">
+                <div class="logo">
+                    <img class="foto" src="assets/foto.jpeg" alt="Uma foto minha no meu currículo">
+                </div>
+                <div class="menu">
+                    <p> 
+                        🔥 Desenvolvedor de Software Junior.<br>
+                        📚 Bacharel em Sistemas de Informação pela Universidade Federal de Santa Maria.<br>
+                        💼 Estou à procura de novos desafios profissionais através de uma efetivação no mercado de trabalho na área da tecnologia da informação, auxiliar administrativo ou áreas correlatas. Possuo foco e capacidade a rápida aprendizagem de competências técnicas, ao cumprimento de horários, à cultura interna da empresa, todas atividades inerentes ao cargo.
+                    </p>
+                </div>
             </header>
             <section>
-                <h2>
-                    Identificação
-                </h2>
+                <h2>Identificação</h2>
                 <dl>
                     <dt>Nome</dt>
                     <dd>Felipe Seidi Harakawa</dd>
-                    <dt>Linkedin</dt>
-                    <dd>https://www.linkedin.com/in/felipe-seidi-harakawa-3a3712248</dd>
-                    <dt>Facebook</dt>
-                    <dd>https://www.facebook.com/felipe.harakawa</dd>
-                    <dt>E-mail</dt>
-                    <dd>felipeharakawa@hotmail.com</dd>
-                    <dt>WhatsApp</dt>
-                    <dd>(18) 98189-5945</dd>
-                    <dt>Discord</dt>
-                    <dd>FelipeHarakawa#4615</dd>
                     <dt>Nascimento</dt>
                     <dd>28/01/1998</dd>
                     <dt>Estado Civil</dt>
                     <dd>Solteiro</dd>
+                    <dt>E-mail</dt>
+                    <dd>felipeharakawa01@gmail.com</dd>
+                    <dt>Linkedin</dt>
+                    <dd>https://www.linkedin.com/in/felipe-seidi-harakawa-3a3712248</dd>
+                    <dt>Portfólio</dt>
+                    <dd>https://github.com/lipeharakawa</dd>
+                    <dt>Discord</dt>
+                    <dd>FelipeHarakawa#4615</dd>
                 </dl>
             </section>
             <address>
-                <h2>
-                    Endereço
-                </h2>
+                <h2>Endereço</h2>
                 <p>
-                    Rua Tiradentes, 760 - Centro <br>
-                    19200-000 - Pirapozinho, SP - Brasil
+                    Rodovia Assis Chateaubriand, KM 468, Bairro Araci <br> 19200-000 - Pirapozinho, SP - Brasil
                 </p>
             </address>
             <section>
-                <h2>
-                    Formação Acadêmica
-                </h2>
-                <h3>
-                    Graduação
-                </h3>
+                <h2>Formação Acadêmica</h2>
+                <h3>Graduação</h3>
                 <ul>
-                    <li>Graduação em Sistemas de Informação completo (2017-2022)<br>
-                        Universidade Federal de Santa Maria (UFSM) - Campus de Frederico Westphalen/RS.</li>
-                    <li>Ensino médio completo (2013-2015)<br>
-                        Colégio Jean Piaget Objetivo - Pirapozinho/SP.
-                        </li>
+                    <li>
+                        Graduação em Sistemas de Informação completo (2017-2022)<br>
+                        Universidade Federal de Santa Maria (UFSM) - Campus de Frederico Westphalen/RS.
+                    </li>
                     <ul> 
                         <li>Disciplinas Cursadas:</li>
                             <ul> 
@@ -78,75 +67,80 @@
                             </ul>  
                     </ul>
                 </ul>
-                <h2>
-                    Formação Complementar
-                </h2>
-                <h3>
-                    Cursos
-                </h3>
-                <ol type = "a">
-                    <li>NLW Setup - Trilha Explorer. Rocketseat (2023). Projeto disponível em: https://github.com/lipeharakawa/nlw-setup.</li>
-                    <li>2021 - MySql - Trabalhando com as suas primeiras tabelas (Digital Innovation One Inc.).</li>
-                    <li>2021 - Trabalhando com Git e GitLab na prática (Digital Innovation One Inc.).</li>
-                </ol>
-            </section>
-            <section>
-                <h2>
-                    Atuação Profissional
-                </h2>
+                <h2>Formação Complementar</h2>
+                <h3>Cursos</h3>
                 <ul>
-                    <li>Local: BSN Tecnologia - Adamantina/SP<br>
-                        Período Início: Julho de 2021 - Término: Dezembro de 2021.<br>
-                        Cargo: Estagiário de Desenvolvimento de Software - Home Office</li>
-                    <ul> 
-                        <li>Atividades desenvolvidas: manutenção e desenvolvimento de Sistemas Web (Angular e Laravel), Aplicativos (Ionic) e Banco de
-                            Dados (MySQL) , investigação e correção de bugs, melhoria de Layouts (HTML e CSS), implementação de código, desenvolvimento
-                            em ambientes Local, Teste, Homologação e Produção, suporte, documentação dos Sistemas e controle de versões com Git.</li>
-                    </ul>
-                    <li>Local: BSN Tecnologia - Adamantina/SP<br>
-                        Período Início: Janeiro de 2022 - Término: Junho de 2022.<br>
-                        Cargo: Programador de Sistemas de Informação Junior - Home Office
-                        
-                    <ul> 
-                        <li>Atividades desenvolvidas: manutenção e desenvolvimento de Sistemas Web (Angular e Laravel), Aplicativos (Ionic) e Banco de
-                            Dados (MySQL) , investigação e correção de bugs, melhoria de Layouts (HTML e CSS), implementação de código, desenvolvimento
-                            em ambientes Local, Teste, Homologação e Produção, suporte, documentação dos Sistemas e controle de versões com Git.</li>
-                    </ul>
+                    <li>
+                        Imersão Dev. Alura (2023)<br>
+                        Principais aprendizados: Conceitos fundamentais da linguagem JavaScript, CSS responsivo, HTML semântico e desenvolvimento de projetos.<br><br>
+                    </li>
+                    <li>
+                        NLW Setup - Trilha Explorer. Rocketseat (2023)<br>
+                        Principais aprendizados: Desenvolvimento de páginas e aplicações web do zero utilizando HTML, CSS e JavaScript, aprendendo as principais tecnologias de desenvolvimento web e utilização do Git e GitHub.<br><br>
+                    </li>
+                    <li>
+                        Aprenda PHP do Zero Com Facilidade e Faça Sites Dinâmicos. Udemy (2021)<br>
+                        Principais aprendizados: Conceitos fundamentais da linguagem PHP; processamento e envio de formulários com conteúdo dinâmico das páginas; integração da Bases de Dados MySQL a partir do PHP; desenvolvimento de consultas no formato SQL e processamento de formulários de maneira segura.<br><br>
+                    </li>
+                    <li>
+                        Curso MySQL Developer. Udemy (2021)<br>
+                        Principais aprendizados: Desenvolvimento de sistema CRUD com comandos de consulta, cadastro, alteração e exclusão de dados; configuração e instalação do Banco de dados MySQL com criação e manipulação de Banco de dados e tabelas.<br><br>
+                    </li>
+                    <li>
+                        Trabalhando com Git e GitLab na prática. Digital Innovation One Inc (2021)<br>
+                        Principais aprendizados: Comandos básicos e avançados de Git; gerenciamento de repositórios locais e externos; clonagem de repositório e versionamento de código que são fundamentais para gerir o desenvolvimento dos projetos.
+                    </li>
                 </ul>
             </section>
             <section>
-                <h2>
-                    Áreas de Atuação
-                </h2>
+                <h2>Atuação Profissional</h2>
+                <ul> 
+                    <li>
+                        Local: BSN Tecnologia - Adamantina/SP<br>
+                        Período Início: Janeiro de 2022 - Término: Junho de 2022.<br>
+                        Cargo: Desenvolvedor de Software Júnior
+                    </li>
+                    <ul> 
+                        <li>
+                            Atividades: Desenvolvimento e manutenção de sistemas web e aplicativos em geral. Investigação e correção de bugs, revisão de código, testes dos sistemas desenvolvidos, documentação dos testes, controle de versões com Git, administração do Banco de dados e resolução de tarefas.
+                        </li>
+                    </ul>
+                    <ul> 
+                        <li>
+                            Linguagens e Tecnologias Utilizadas: HTML, CSS, JavaScript, Angular, PHP, Laravel, Banco de dados MySQL, Ionic, Git, GitHub, Visual Studio Code, Android Studio e Pacote Office.
+                        </li>
+                    </ul>
+                    <li>
+                        Local: BSN Tecnologia - Adamantina/SP<br>
+                        Período Início: Julho de 2021 - Término: Dezembro de 2021.<br>
+                        Cargo: Estagiário Desenvolvedor de Software Júnior
+                    </li>
+                </ul>
+            </section>
+            <section>
+                <h2>Áreas de Atuação</h2>
                 <ol start = "1">
                     <li>Desenvolvimento Web</li>
                     <li>Desenvolvimento Mobile</li>
                 </ol>
-                <h3>
-                    Tecnologias e Ferramentas
-                </h3>
-                <table border = 1>
-                    <tr>
-                        <td>HTML</td>
-                        <td>CSS</td>
-                        <td>JavaScript</td>
-                        <td>MySQL</td>
-                        <td>Git</td>
-                        <td>GitHub</td>
-                    </tr>
-                    <tr>
-                        <td>Visual Studio Code</td>
-                        <td>Google Cloud</td>
-                        <td>Microsoft Office</td>
-                        <td>Android</td>
-                        <td>iOS/macOS</td>
-                        <td>Windows</td>
-                    </tr>
-                </table>
+                <h3>Tecnologias e Ferramentas</h3>
+                <ol start = "1">
+                    <li>HTML</li>
+                    <li>CSS</li>
+                    <li>JavaScript</li>
+                    <li>PHP</li>
+                    <li>MySQL</li>
+                    <li>Git</li>
+                    <li>GitHub</li>
+                    <li>Visual Studio Code</li>
+                    <li>Microsoft Office</li>
+                    <li>Android</li>
+                    <li>iOS/macOS</li>
+                    <li>Windows</li>
+                </ol> 
             </section>
             <footer>
-                <hr>
-                <a href="" target = "_blank"> Voltar para o início</a>
+                <a href="index.html"> Voltar para o início</a>
             </footer>
         </div>
     </body>
